--- a/k8s/manifests/master-data/staging/job/cities-import4.yaml
+++ b/k8s/manifests/master-data/staging/job/cities-import4.yaml
@@ -24,7 +24,7 @@ spec:
       containers:
       - name: cities-import
         image: acrdevtshpwn.azurecr.io/cities-initializer:0.1.0-feaure-staging-k8s.1-cd03d2d
-        command: ["--input", "/mnt/blob/weather_hourly-full.csv"]
+        args: ["--input", "/mnt/blob/weather_hourly-full.csv"]
         volumeMounts:
         - name: imports-blob
           mountPath: "/mnt/blob"
