--- a/k8s/manifests/master-data/staging/kustomization.yaml
+++ b/k8s/manifests/master-data/staging/kustomization.yaml
@@ -4,6 +4,6 @@ metadata:
   namespace: backend
   name: master-data-staging-kustomization
 resources:
-  - job/cities-import5.yaml
-  - pv/imports-sa_pv.yaml
-  - pvc/imports-storage_claim.yaml
+  - job/cities-import6.yaml
+  - pv/imports-sa_pv1.yaml
+  - pvc/imports-storage_claim1.yaml
