--- a/k8s/manifests/master-data/staging/pv/imports-sa_pv1.yaml
+++ b/k8s/manifests/master-data/staging/pv/imports-sa_pv1.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv-azure-blob-imports
+  name: pv-az-blob-imports
 spec:
   capacity:
     storage: 1Gi
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: manual-blob-fuse
+  storageClassName: ""
   csi:
     driver: blob.csi.azure.com
     volumeHandle: stwfimportsdev_imports        # unique handle
