--- a/k8s/manifests/master-data/staging/pvc/imports-storage_claim2.yaml
+++ b/k8s/manifests/master-data/staging/pvc/imports-storage_claim2.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc-azure-blob-imports
+  name: pvc-az-blob-imports
   namespace: backend
   labels:
-    app: pvc-azure-blob-imports
+    app: pvc-az-blob-imports
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
-  storageClassName: manual-blob-fuse
-  volumeName: pv-azure-blob-imports
+  storageClassName: ""
+  volumeName: pv-az-blob-imports
