--- a/k8s/manifests/tools/inspectors/image_inspector.yaml
+++ b/k8s/manifests/tools/inspectors/image_inspector.yaml
@@ -1,41 +1,42 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: cities-import5
+  name: dev-cities-import-as-root
   namespace: backend
-  labels:
-    app: cities-import
-  annotations:
-    sidecar.istio.io/inject: "false"  # Pas d'Istio pour le debug
 spec:
   template:
     metadata:
-      name: cities-import5
+      annotations:
+        sidecar.istio.io/inject: "false"
       labels:
-        app: cities-import5
+        app: cities-import
+        environment: dev
     spec:
-      securityContext:
-        runAsUser: 0
-        runAsGroup: 0
-        fsGroup: 0
       tolerations:
       - key: workload
         operator: 'Equal'
         value: 'weather-forecast'
         effect: 'NoSchedule'
-      # Where will my pods will run, and in what node label
-      # We should add a toleration because the user nodes are tainted and will be not schedule the pods if the taint is not provided
       nodeSelector:
         kubernetes.azure.com/mode: user
+      
+      # ⬇️ Force root user
+      securityContext:
+        runAsUser: 0
+        runAsGroup: 0
+        fsGroup: 0
+      
       containers:
       - name: cities-import
-        image: acrdevtshpwn.azurecr.io/cities-initializer:0.1.0-feaure-staging-k8s.1-12860ec
+        image: acrdevtshpwn.azurecr.io/cities-initializer:0.1.0-feaure-staging-k8s.1-cd03d2d
         args: ["--input", "/mnt/blob/capitals.csv"]
         volumeMounts:
         - name: imports-blob
           mountPath: "/mnt/blob"
+      
       volumes:
       - name: imports-blob
         persistentVolumeClaim:
           claimName: dev-pvc-az-blob-imports
+      
       restartPolicy: Never
