--- a/k8s/gitops/apps/weatherly/dev.yaml
+++ b/k8s/gitops/apps/weatherly/dev.yaml
@@ -11,6 +11,8 @@ spec:
     repoURL: https://github.com/WellArchitectedLabs/WellArchitectedLab.MonoRepo.git
     targetRevision: feaure/staging-k8s
     path: k8s/overlays/dev
+    kustomize:
+      buildOptions: "--enable-helm"
   destination:
     server: https://kubernetes.default.svc
     namespace: default
