fix: modify the enterprise grade

--- a/k8s/gitops/business/staging/postgres.yaml
+++ b/k8s/gitops/business/staging/postgres.yaml
@@ -1,30 +1,73 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: master-data-postgres-staging
+  name: master-data-database
   namespace: argocd
+  labels:
+    workload: business
+    stack: business
+    workload-type: database
+  annotations:
+    argocd.argoproj.io/sync-wave: "20"
 spec:
   project: default
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: backend
   source:
     repoURL: https://charts.bitnami.com/bitnami
     chart: postgresql
-    targetRevision: 15.5.0
+    targetRevision: "15.5.0"
     helm:
-      releaseName: master-data
       values: |
+        image:
+          registry: docker.io
+          repository: bitnamilegacy/postgresql
+          tag: "15.5.0-debian-11-r0"
+          pullPolicy: IfNotPresent
+
+        metrics:
+          image:
+            repository: bitnamilegacy/postgres-exporter
+            tag: "0.11.1-debian-11-r0"
+
+        volumePermissions:
+          image:
+            repository: bitnamilegacy/os-shell
+            tag: "10.4.1-debian-11-r17"
+
         auth:
-          username: masterdata_app
-          password: app_password
-          database: master_data
+          username: grafana                    # Hardcode the username
+          database: grafana                    # Hardcode the database name
+          existingSecret: grafana-secrets      # Use secret ONLY for passwords
+          secretKeys:
+            adminPasswordKey: password         # postgres superuser (postgres) password from secret
+            userPasswordKey: password          # grafana user password from secret, equals to the super user password
+            replicationPasswordKey: password   # replication password from secret
 
         primary:
           persistence:
             enabled: true
+            storageClass: managed-csi
             size: 10Gi
+          nodeSelector:
+            kubernetes.azure.com/mode: system
+
+          resources:
+            requests:
+              cpu: 25m
+              memory: 50Mi
+            limits:
+              cpu: 500m
+              memory: 512Mi
+
+  destination:
+    namespace: backend
+    server: https://kubernetes.default.svc
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
+    retry:
+      limit: 2
+      backoff:
+        duration: 5s
