--- a/k8s/gitops/business/staging/postgres.yaml
+++ b/k8s/gitops/business/staging/postgres.yaml
@@ -43,8 +43,13 @@ spec:
             enabled: true
             storageClass: managed-csi
             size: 10Gi
+          tolerations:
+            - key: "workload"
+              operator: "Equal"
+              value: "weather-forecast"
+              effect: "NoSchedule"
           nodeSelector:
-            kubernetes.azure.com/mode: system
+            kubernetes.azure.com/mode: user
 
           resources:
             requests:
