--- a/k8s/gitops/business/staging/postgres.yaml
+++ b/k8s/gitops/business/staging/postgres.yaml
@@ -34,9 +34,8 @@ spec:
             tag: "10.4.1-debian-11-r17"
 
         auth:
-          username: masterdata_app
-          password: app_password
-          database: master_data
+          username: postgres
+          password: "" # Superuser password empty, will be mounted via secret
 
         primary:
           persistence:
@@ -58,6 +57,41 @@ spec:
             limits:
               cpu: 500m
               memory: 512Mi
+
+          initContainers:
+            - name: init-sql
+              image: bitnamilegacy/os-shell:10.4.1-debian-11-r17
+              command: ["/bin/sh", "-c"]
+              args:
+                - envsubst < /init/init.sql.template > /docker-entrypoint-initdb.d/init.sql
+              volumeMounts:
+                - name: init-sql
+                  mountPath: /initdb
+              env:
+                - name: DB_OWNER_USER
+                  valueFrom:
+                    secretKeyRef:
+                      name: master-data-db-secrets
+                      key: DB_OWNER_USER
+                - name: DB_OWNER_PASSWORD
+                  valueFrom:
+                    secretKeyRef:
+                      name: master-data-db-secrets
+                      key: DB_OWNER_PASSWORD
+                - name: DB_APP_USER
+                  valueFrom:
+                    secretKeyRef:
+                      name: master-data-db-secrets
+                      key: DB_APP_USER
+                - name: DB_APP_PASSWORD
+                  valueFrom:
+                    secretKeyRef:
+                      name: master-data-db-secrets
+                      key: DB_APP_PASSWORD
+          volumes:
+            - name: init-sql
+              configMap:
+                name: master-data-initdb-configmap
 
   destination:
     namespace: backend
