--- a/k8s/gitops/business/staging/postgres.yaml
+++ b/k8s/gitops/business/staging/postgres.yaml
@@ -28,14 +28,9 @@ spec:
             repository: bitnamilegacy/postgres-exporter
             tag: "0.11.1-debian-11-r0"
 
-        volumePermissions:
-          image:
-            repository: bitnamilegacy/os-shell
-            tag: "10.4.1-debian-11-r17"
-
         auth:
           username: postgres
-          password: ""  # superuser password is provided by secret
+          password: "" # superuser via secret if needed
 
         primary:
           persistence:
@@ -60,45 +55,29 @@ spec:
               cpu: 500m
               memory: 512Mi
 
-          # Mount the init SQL template and inject secrets
-          extraVolumes:
-            - name: init-sql
-              configMap:
-                name: master-data-initdb-configmap
+          initdbScriptsConfigMap: master-data-initdb-configmap
 
-          extraVolumeMounts:
-            - name: init-sql
-              mountPath: /initdb
-
-          initContainers:
-          - name: init-sql
-            image: alpine:3.18
-            command: ["/bin/sh", "-c"]
-            args:
-              - |
-                apk add --no-cache gettext \
-                && envsubst < /initdb/init.sql.template > /docker-entrypoint-initdb.d/init.sql
-            env:
-              - name: DB_OWNER_USER
-                valueFrom:
-                  secretKeyRef:
-                    name: master-data-db-secrets
-                    key: DB_OWNER_USER
-              - name: DB_OWNER_PASSWORD
-                valueFrom:
-                  secretKeyRef:
-                    name: master-data-db-secrets
-                    key: DB_OWNER_PASSWORD
-              - name: DB_APP_USER
-                valueFrom:
-                  secretKeyRef:
-                    name: master-data-db-secrets
-                    key: DB_APP_USER
-              - name: DB_APP_PASSWORD
-                valueFrom:
-                  secretKeyRef:
-                    name: master-data-db-secrets
-                    key: DB_APP_PASSWORD
+          extraEnvVars:
+            - name: DB_OWNER_USER
+              valueFrom:
+                secretKeyRef:
+                  name: master-data-db-secrets
+                  key: DB_OWNER_USER
+            - name: DB_OWNER_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: master-data-db-secrets
+                  key: DB_OWNER_PASSWORD
+            - name: DB_APP_USER
+              valueFrom:
+                secretKeyRef:
+                  name: master-data-db-secrets
+                  key: DB_APP_USER
+            - name: DB_APP_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: master-data-db-secrets
+                  key: DB_APP_PASSWORD
 
   destination:
     namespace: backend
