--- a/k8s/manifests/master-data/staging/job/cities-import.yaml
+++ b/k8s/manifests/master-data/staging/job/cities-import.yaml
@@ -31,6 +31,12 @@ spec:
       - name: cities-import
         image: acrdevtshpwn.azurecr.io/cities-initializer:0.1.0-feaure-staging-k8s.1-12860ec
         args: ["--input", "/mnt/blob/capitals.csv"]
+        env:
+          - name: POSTGRES_DSN
+            valueFrom:
+              secretKeyRef:
+                name: master-data-db-secrets
+                key: DB_APP_DSN
         volumeMounts:
         - name: imports-blob
           mountPath: "/mnt/blob"
