core: working version with being able to connecto to database from pg admin

--- a/k8s/gitops/business/staging/postgres.yaml
+++ b/k8s/gitops/business/staging/postgres.yaml
@@ -30,7 +30,11 @@ spec:
 
         auth:
           username: postgres
-          password: "" # superuser via secret if needed
+          existingSecret: master-data-db-secrets
+          secretKeys:
+            adminPasswordKey: POSTGRES_SUPERUSER_PASSWORD
+          # Database to create on initialization
+          database: master_data
 
         primary:
           persistence:
@@ -55,24 +59,23 @@ spec:
               cpu: 500m
               memory: 512Mi
 
-          initdbScriptsConfigMap: master-data-initdb-configmap
+          # Correct initdb configuration for Bitnami chart 15.5.0
+          initdb:
+            scriptsConfigMap: master-data-initdb-configmap
+            user: postgres
 
+          # Pass app user credentials as environment variables for the init scripts
           extraEnvVars:
-            - name: DB_OWNER_USER
-              valueFrom:
-                secretKeyRef:
-                  name: master-data-db-secrets
-                  key: DB_OWNER_USER
-            - name: DB_OWNER_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: master-data-db-secrets
-                  key: DB_OWNER_PASSWORD
             - name: DB_APP_USER
               valueFrom:
                 secretKeyRef:
                   name: master-data-db-secrets
                   key: DB_APP_USER
+            - name: PGPASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: master-data-db-secrets
+                  key: POSTGRES_SUPERUSER_PASSWORD
             - name: DB_APP_PASSWORD
               valueFrom:
                 secretKeyRef:
