test: disable istio from job (to reactivate later) and postgres

--- a/k8s/gitops/business/staging/postgres.yaml
+++ b/k8s/gitops/business/staging/postgres.yaml
@@ -37,6 +37,8 @@ spec:
           database: master_data
 
         primary:
+           podAnnotations:
+            sidecar.istio.io/inject: "false"
           persistence:
             enabled: true
             storageClass: managed-csi
