--- a/k8s/manifests/master-data/staging/job/cities-import.yaml
+++ b/k8s/manifests/master-data/staging/job/cities-import.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: backend
   labels:
     app: cities-import
+  annotations:
+    sidecar.istio.io/inject: "false"
 spec:
   template:
     metadata:
