[DevOps] Prepare kubernetes objects for staging services (Kubernetes jobs, IAM Access in terraform & Db migrator) (#88)
* core: first implementation of blob storage integration

* core: migrate imports file to new storage account. Create storage account on terraform level.

* fix: backend declaration warnings
core: valid terraform after local apply

* chore: migrate security code in standalone security module

* chore: final version with correctly applied security module migration.

* chore: move all modules files into modules folder for more clarity.

* core: add more structure to the repo by splitting files by resource type.

* core: adding blob storage csi driver

* core: first manifests enabling storage account connection using Managed Identities

* core: final k8s workloads (not tested yet)

* core: after CSI driver integration, we do not conect to blob storage using sdk anymore.

* docs: update readme with a valid date

* test: point to current branch for testing

* core: fix path

* fix remove volumeName which is only applicable for persistent volumes (we are in a dynamic volume case since the volume is created implicitely by the CSI driver)

* core: creating a new volume claim since modifications are prohibited on existing ones.

* fix: remove file from kustomize

* fix: update claim name

* core: recreating job due to immutable pvc

* fix: correct auth type with lowercase

* fix: recreate storage class too

* fix: use static (volume based) instead of dynamic provionning.

* fix: modify correct file

* fix: create a new file

* fix: add toleration and node selection

* fix: schedule csi driver also on user nodes. The deamonsets need to be scheduled there for the mounting execution.

* core: assign "Storage Account Key Operator Service Role" to kubelet identity
test: update docker image version

* fix: correct args

* fix: immutable file hack

* test: try to make job work

* core: correct naming to match kustomization file

* test: create new job

* fix: corr

--- a/k8s/overlays/dev/kustomization.yaml
+++ b/k8s/overlays/dev/kustomization.yaml
@@ -6,9 +6,10 @@ resources:
   - ../../manifests/operations
   - ../../manifests/insights/bff
   - ../../manifests/insights/frontend
-  - ../../manifests/shared
   - ../../manifests/insights/bff/database
   - insights-bff_config-map.yaml
+  - ../../manifests/master-data/staging
+  - ../../manifests/shared
   - ../../manifests/tools/htg
 
 
