--- a/k8s/manifests/master-data/staging/job/cities-import4.yaml
+++ b/k8s/manifests/master-data/staging/job/cities-import4.yaml
@@ -31,7 +31,7 @@ spec:
         kubernetes.azure.com/mode: user
       initContainers:
       - name: wait-for-postgres
-        image: bitnami/postgresql:15
+        image: bitnamilegacy/postgresql:15.5.0-debian-11-r0
         command:
           - /bin/sh
           - -c
